--- a/index.html
+++ b/index.html
@@ -13,43 +13,47 @@
 
   <!-- Banner section -->
 <div class="banner">
-  <h1 class="Slogan">Change your life, start to code </h1>
-  <p class="Card_Detail"> Le Wagon brings technical skills to creative people </p>
-  <div class="btn_blue">
-    <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Apply now</a>
-  </div>  
+  <h1 class="Slogan">Ballon d'or 2022, qui sera le vainqueur ? </h1>
+  <p class="Card_Detail"> 3 candidats favoris dont nous allons découvrir le profil </p>
+  <a href="https://www.lequipe.fr/Football/Actualites/Ballon-d-or-2022-la-liste-complete-des-nommes-avec-quatre-francais-sans-messi/1347880" target="_blank" class="btn_blue" > Toutes les infos</a>
 </div>
 
 
   <!-- Container -->
 <div class="Sous_Titre">
-  <h2>Discover our campuses</h2>
+  <h2>Découvrez les joueurs</h2>
 </div>
 
-  <!-- Div for Shanghai Card -->
-<div class= "Campus_Card">
-  <img src="images/shanghai.jpg" alt="Shanghai" width="150">
-  <h3>Shanghai</h3> 
-  <p> Learn to code with us in Shanghai </p>
-</div>
+<!--Div Cartes-->
+<div class="Placement_cartes">
+  <!-- Div for Karim Benzema -->
+  <div class= "Campus_Card">
+    <img src="https://www.lequipe.fr/_medias/img-photo-jpg/karim-benzema-va-prolonger-au-real-cremel-benjamin-l-equipe/1500000001531962/326:29,1619:1322-828-828-75/03236.jpg" alt="Karim Benzema" width="150">
+    <h3>Karim Benzema</h3> 
+    <p> Sûrement l'année parfaite pour le français, favori n°1 du ballon d'or après une saison de tous les records. Qui pourrait lui voler ce titre ?</p>
+    <a href="https://fr.wikipedia.org/wiki/Karim_Benzema" target="_blank" class="btn_black"> Découvrir </a>
+  </div>
 
-  <!-- Div for London card -->
-<div class="Campus_Card">
-  <img src="images/london.jpg" alt="London" width="150">
-  <h3>London</h3>
-  <p> Learn to code with us in London </p>
-</div>
+  <!-- Div for Sadio Mané -->
+  <div class="Campus_Card">
+    <img src="https://assets-fr.imgfoot.com/media/cache/1200x1200/sadio-mane-2122-6.jpg" alt="Sadio Mané" width="150">
+    <h3>Sadio Mané</h3>
+    <p> Le sénégalais, auteur d'une saison fracassante sera sans aucun doute sur le podium de cette édition, mais à quelle place ? </p>
+    <a href="https://fr.wikipedia.org/wiki/Sadio_Man%C3%A9" target="_blank" class="btn_black" > Découvrir </a>
+  </div>
 
-  <!-- Div for Paris Card-->
- <div class="Campus_Card">
-  <img src="images/paris.jpg" alt="Paris" width="150">
-  <h3> Paris</h3>
-  <p> Learn to code with us in Paris </p>
-</div>
+  <!-- Div for Robert Lewandowski -->
+  <div class="Campus_Card">
+    <img src="https://assets-fr.imgfoot.com/media/cache/1200x1200/robert-lewandowski-cover-62b5d17c6bb31.jpg" alt="Robert Lewandowski" width="150">
+    <h3> Robert Lewandowski</h3>
+    <p> Il était prédit à la victoire finale en 2021, sans succès. Il fait partie de nos favoris pour cette édition malgré un retard sur ses deux collègues. </p>
+    <a href="https://fr.wikipedia.org/wiki/Robert_Lewandowski" target="_blank" class="btn_black" > Découvrir </a>
+  </div>
+</div> 
 
   <!-- Footer section -->
 <div class="footer">
-<p> Website made with Love at Le Wagon </p>
+<p> Aller le foot </p>
 </div>
 
 
